test: start ide faster