@@ -44,6 +44,10 @@ intellij {
     version ideaVersion
 }
 
+runIde {
+    jvmArgs '-Xms768m', '-Xmx2048m', '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
+}
+
 repositories {
     mavenCentral()
 }
@@ -53,7 +57,7 @@ def versionIsNonStable = { String version ->
     if (['RELEASE', 'FINAL', 'GA'].any { qualifier -> version.toUpperCase().endsWith(qualifier) }) {
         return false
     }
-    boolean isNonStable = ['alpha', 'Alpha', 'ALPHA', 'b', 'beta', 'Beta', 'BETA', 'rc', '‌RC', 'M', 'EA', 'pr', 'atlassian'].any { qualifier ->
+    boolean isNonStable = ['alpha', 'Alpha', 'ALPHA', 'b', 'beta', 'Beta', 'BETA', 'rc', 'RC', 'M', 'EA', 'pr', 'atlassian'].any { qualifier ->
         version ==~ /(?i).*[.-]${qualifier}[.\d-]*/
     }
     return isNonStable
